--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <div class="grid-item painter digital">
         <a href="images/復興作業07.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業07_m.jpg" /></a>
       </div>
-      <div class="grid-item painter ">
+      <div class="grid-item painter sketch">
         <a href="images/復興作業08.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業08_m.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
@@ -226,7 +226,7 @@
       <div class="grid-item painter ink">
         <a href="images/復興作業10.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業10_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter mark">
         <a href="images/復興作業11.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業11_m.jpg" /></a>
       </div>
       <div class="grid-item painter sketch">
@@ -235,16 +235,16 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業13.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業13_m.jpg" /></a>
       </div>
-      <div class="grid-item painter ">
+      <div class="grid-item painter digital">
         <a href="images/復興作業14.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業14_m.jpg" /></a>
       </div>
-      <div class="grid-item painter water ">
+      <div class="grid-item painter water">
         <a href="images/復興作業15.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業15_m.jpg" /></a>
       </div>
       <div class="grid-item painter mark">
         <a href="images/復興作業16.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業16_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter water">
         <a href="images/復興作業17.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業17_m.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
@@ -262,7 +262,7 @@
       <div class="grid-item painter water">
         <a href="images/復興作業22.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業22_m.jpg" /></a>
       </div>
-      <div class="grid-item painter ">
+      <div class="grid-item painter digital">
         <a href="images/復興作業23.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業23_m.jpg" /></a>
       </div>
       <div class="grid-item painter mark">
@@ -280,7 +280,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業28.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業28_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter ink">
         <a href="images/復興作業29.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業29_m.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
@@ -289,7 +289,7 @@
       <div class="grid-item painter mark">
         <a href="images/復興作業31.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業31_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter oil">
         <a href="images/復興作業32.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業32_m.jpg" /></a>
       </div>
       <div class="grid-item painter oil">
@@ -304,7 +304,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業36.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業36_m.jpg" /></a>
       </div>
-      <div class="grid-item painter ">
+      <div class="grid-item painter mark">
         <a href="images/復興作業37.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業37_m.jpg" /></a>
       </div>
       <div class="grid-item painter sketch">
@@ -313,7 +313,7 @@
       <div class="grid-item painter mark">
         <a href="images/復興作業39.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業39_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter sketch">
         <a href="images/復興作業40.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業40_m.jpg" /></a>
       </div>
       <div class="grid-item painter digital">
@@ -322,7 +322,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業42.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業42_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter water">
         <a href="images/復興作業43.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業43_m.jpg" /></a>
       </div>
       <div class="grid-item painter oil">
@@ -331,7 +331,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業45.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業45_m.jpg" /></a>
       </div>
-      <div class="grid-item painter ">
+      <div class="grid-item painter mark">
         <a href="images/復興作業46.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業46_m.jpg" /></a>
       </div>
       <div class="grid-item painter sketch">
@@ -340,7 +340,7 @@
       <div class="grid-item painter digital">
         <a href="images/復興作業48.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業48_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter sketch">
         <a href="images/復興作業49.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業49_m.jpg" /></a>
       </div>
       <div class="grid-item painter sketch">
@@ -349,7 +349,7 @@
       <div class="grid-item painter digital">
         <a href="images/復興作業51.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業51_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter ink">
         <a href="images/復興作業52.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業52_m.jpg" /></a>
       </div>
       <div class="grid-item painter oil">
@@ -358,7 +358,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業54.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業54_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter sketch">
         <a href="images/復興作業55.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業55_m.jpg" /></a>
       </div>
       <div class="grid-item painter sketch">
@@ -367,7 +367,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業57.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業57_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter digital">
         <a href="images/復興作業58.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業58_m.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
@@ -376,7 +376,7 @@
       <div class="grid-item painter ink">
         <a href="images/復興作業60.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業60_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter ink">
         <a href="images/復興作業61.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業61_m.jpg" /></a>
       </div>
       <div class="grid-item painter sketch">
@@ -385,7 +385,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業63.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業63_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter ink">
         <a href="images/復興作業64.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業64_m.jpg" /></a>
       </div>
       <div class="grid-item painter mark">
@@ -394,7 +394,7 @@
       <div class="grid-item painter water">
         <a href="images/復興作業66.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業66_m.jpg" /></a>
       </div>
-      <div class="grid-item painter">
+      <div class="grid-item painter sketch">
         <a href="images/復興作業67.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業67_m.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
