--- a/index.html
+++ b/index.html
@@ -459,19 +459,19 @@
       </div> 
 
       <div class="grid-item painter ink">
-        <a href="images/LINE_ALBUM_23 程正邦_250109_5" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_5s" /></a>
+        <a href="images/LINE_ALBUM_23 程正邦_250109_5.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_5s.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
-        <a href="images/LINE_ALBUM_23 程正邦_250109_4" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_4s" /></a>
+        <a href="images/LINE_ALBUM_23 程正邦_250109_4.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_4s.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
-        <a href="images/LINE_ALBUM_23 程正邦_250109_3" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_3s" /></a>
+        <a href="images/LINE_ALBUM_23 程正邦_250109_3.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_3s.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
-        <a href="images/LINE_ALBUM_23 程正邦_250109_2" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_2s" /></a>
+        <a href="images/LINE_ALBUM_23 程正邦_250109_2.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_2s.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
-        <a href="images/LINE_ALBUM_23 程正邦_250109_1" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_1s" /></a>
+        <a href="images/LINE_ALBUM_23 程正邦_250109_1.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_1s.jpg" /></a>
       </div>
       
 	    
