--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             src="images/20200919_202642m.jpg" /></a>
       </div>
       <div class="grid-item painter mark">
-        <a href="images/145181m.jpg" data-fancybox="painter" data-caption="東石漁港活動海報"><img
+        <a href="images/145181.jpg" data-fancybox="painter" data-caption="東石漁港活動海報"><img
             src="images/145181m.jpg" /></a>
       </div>
       <div class="grid-item painter digital">
