--- a/index.html
+++ b/index.html
@@ -1562,7 +1562,7 @@
           </h2>
           <ul>
             <i class="fa fa-id-card-o"
-              aria-hidden="true"></i></i>&nbsp;「三立新聞網」編輯中心副組長</li>
+              aria-hidden="true"></i></i>&nbsp;「三立新聞網」編輯組副組長</li>
             <li><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;輔仁大學大傳所、銘傳大學大傳系、復興商工美工科</li>
             <li>&nbsp;<i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;<a
                 href="tel:+886-905579995">0905579995</a></li>
@@ -1605,7 +1605,7 @@
           <h3>設計，也許我天分不夠，但是我還沒放棄。</h3><br><br>
           <p>遺傳愛畫畫媽媽的天賦，自幼美術課常拿高分，國中畢業曾報考復興美工，因自認缺乏創意沒去就讀，但我對影像熱情不減，專科畢業後，插大考取銘傳大學大眾傳播系，大三拍攝的戲劇短片，代表學校參加廣電比賽。<br><br>
             服役期間，在金門當新聞兵，退伍後當過攝影助理、遊戲編輯，最後在《蘋果日報》生根落腳，從事新聞工作十餘年，《蘋果》易主後曾轉換跑道做美術設計、中天新聞記者，目前是三立新聞網小夜主管。<br><br>
-            面對大眾媒體轉型和自媒體興起，工作之餘持續進修，2020年完成輔大大眾傳播碩士學位，再到復興商工夜間部念美工科，加強手繪能力，復興畢業後，繼續留校旁聽廣告設計、室內設計課程，期望成為理論與實務並重的傳播人。</p>
+            面對大眾媒體轉型和自媒體興起，工作之餘持續進修，2020年完成輔大大眾傳播碩士學位，再到復興商工美工科念夜間部，加強手繪能力，復興畢業後，繼續留校旁聽廣告設計、室內設計課程，期望成為理論與實務並重的傳播人。</p>
           <br>
           <div id="social">
             <p>
@@ -1629,12 +1629,12 @@
             <tr>
               <td>2024/4~<br></td>
               <th>三立新聞網</th>
-              <td>編輯中心副組長</td>
+              <td>編輯組副組長</td>
             </tr>
             <tr>
               <td>2022/2~<br>2024/4</td>
               <th>中天新聞</th>
-              <td>文字記者</td>
+              <td>文字記者<br>編輯</td>
             </tr>
             <tr>
               <td>2021/9~<br>2021/12</td>
