--- a/index.html
+++ b/index.html
@@ -119,12 +119,10 @@
       <div class="grid-sizer"></div>
       <div class="gutter-sizer"></div>
       <div class="grid-item painter mark">
-        <a href="images/20200919_202642.jpg" data-fancybox="painter" data-caption="台啤手繪海報"><img
-            src="images/20200919_202642m.jpg" /></a>
+        <a href="images/20200919_202642.jpg" data-fancybox="painter" data-caption="台啤手繪海報"><img src="images/20200919_202642m.jpg" /></a>
       </div>
       <div class="grid-item painter mark">
-        <a href="images/145181.jpg" data-fancybox="painter" data-caption="東石漁港活動海報"><img
-            src="images/145181m.jpg" /></a>
+        <a href="images/145181.jpg" data-fancybox="painter" data-caption="東石漁港活動海報"><img src="images/145181m.jpg" /></a>
       </div>
       <div class="grid-item painter digital">
         <a href="images/媽祖.jpg" data-fancybox="painter"
@@ -456,8 +454,7 @@
       </div>
       <div class="grid-item painter mark">
         <a href="images/復興作業87.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業87_m.jpg" /></a>
-      </div> 
-
+      </div>
       <div class="grid-item painter ink">
         <a href="images/LINE_ALBUM_23 程正邦_250109_5.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_5s.jpg" /></a>
       </div>
@@ -473,8 +470,6 @@
       <div class="grid-item painter ink">
         <a href="images/LINE_ALBUM_23 程正邦_250109_1.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/LINE_ALBUM_23 程正邦_250109_1s.jpg" /></a>
       </div>
-      
-
       <div class="grid-item painter ink">
         <a href="images/2025復興畢展 (6).jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/2025復興畢展 (6)小.jpg" /></a>
       </div>	
@@ -493,7 +488,6 @@
       <div class="grid-item painter ink">
         <a href="images/2025復興畢展 (1).jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/2025復興畢展 (1)小.jpg" /></a>
       </div>
-
       <div class="grid-item painter water">
         <a href="images/2025復興畢展 (3).jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/2025復興畢展 (3)小.jpg" /></a>
       </div>	
@@ -511,10 +505,7 @@
       </div>	
       <div class="grid-item painter mark">
         <a href="images/2025復興畢展 (7).jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/2025復興畢展 (7)小.jpg" /></a>
-      </div>
-
-
-	    
+      </div>	    
       <div class="grid-item photo">
         <a href="images/160488761.jpg" data-fancybox="photo" data-caption="光影練習"><img src="images/160488761m.jpg" /></a>
       </div>
