--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <div class="grid-item painter sketch">
         <a href="images/復興作業28.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業28_m.jpg" /></a>
       </div>
-      <div class="grid-item painter ink">
+      <div class="grid-item painter sketch">
         <a href="images/復興作業29.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業29_m.jpg" /></a>
       </div>
       <div class="grid-item painter ink">
